# ZJU-Course-notes

./: .gitignore  README.md
ds_code&note/: 不相交集.md  二叉树.md  优先队列.md  图(graph).md
ds_code&note/HW6/: complete_BST.c  percolate_up&down.c
ds_code&note/HW7/: main.c  test.c
ds_code&note/HW8/: Hamiltonian Cycle.c  IsTopOrd.c
人工智能初步/口罩识别/: test2.py  torch_main.py
人工智能初步/口罩识别/results/: mytemp.pth  temp.pth
人工智能初步/口罩识别/torch_py/: FaceRec.py  MobileNetV1.py  ProcessingData.py  Utils.py
人工智能实验/: readme.md
人工智能实验/lab1/: lab1.md
人工智能实验/lab1/1.1/: MY_KNN.py  test.py
人工智能实验/lab1/1.2/: KNN.py  datingTestSet2.txt  test.py  test.txt
人工智能实验/lab1/1.3/: KNN.py
人工智能实验/lab2/: HW2.MD
人工智能实验/lab2/2.1/: regression.py
人工智能实验/lab2/2.2/: linear_regression.py
人工智能实验/lab2/2.3/: sort_flower.py
人工智能实验/lab3/: trainRe.py
人工智能实验/lab3/data/: test.txt
人工智能实验/lab3/model/: rbf_0.125_0.125.pkl  rbf_0.125_0.5.pkl  rbf_0.125_2.pkl  rbf_0.125_32.pkl  rbf_0.125_8.pkl  rbf_0.5_0.125.pkl  rbf_0.5_0.5.pkl  rbf_0.5_2.pkl  rbf_0.5_32.pkl  rbf_0.5_8.pkl  rbf_2_0.125.pkl  rbf_2_0.5.pkl  rbf_2_2.pkl
人工智能实验/lab4/: HW4.MD
人工智能实验/lab4/4.1/: Mypca.py  PCA.py
人工智能实验/lab4/4.2/: PCA.py
人工智能实验/lab5/: HW5.MD  LDA.PY
人工智能实验/lab6/: HW6.MD  LPP.PY  lppcopy.py
人工智能实验/lab7/: Batch.py  HW7.MD  SGD.PY  readme.md
人工智能实验/lab8/: HW8.MD
人工智能实验/lab8/5-3/: back-propgation.py  bp-pytorch-version.py  bp.py
信号与系统/作业/HW1/: 第一章作业.md
信号与系统/作业/HW10/: HW10.MD
信号与系统/作业/HW11/: HW11.MD
信号与系统/作业/HW12/: HW12.MD
信号与系统/作业/HW2/: HW2.MD  conv_1d.py  conv_2d_tmp.py
信号与系统/作业/HW3/: HW3.MD
信号与系统/作业/HW4/: HW4.MD
信号与系统/作业/HW5/: HW5.MD
信号与系统/作业/HW6/: HW6.MD
信号与系统/作业/HW7/: HW7.MD
信号与系统/作业/HW8/: HW8.MD
信号与系统/作业/HW9/: HW9.md
信号与系统/课件/: 第一章.md  第七章.md  第三章.md  第二章.md  第五章.md  第六章.md  第四章.md
安全编程技术/: readme.md
安全编程技术/作业/lab1.1&1.2/: lab1.1&1.2.md
安全编程技术/作业/lab1.3&1.4&1.5/: lab1.3&1.4&1.5.md
安全编程技术/作业/lab2.1/: 2.1.md
安全编程技术/笔记/: 5.12.md  5.16.md  5.19.md  5.23.md  5.26.md  5.30.md  5.5.md  6.2.md  XSS.MD  remake.c
数值分析方法/HW1/: HW1.md  hw1.docx  problem5.c  problem6.c  ~$hw1.docx
数值分析方法/HW2/: HW2.MD  Problem3-a.py  Problem4-b.py  hw2.docx
数值分析方法/HW3/: Gauss_Seidel_Method.c  HW3.MD  HW3.rar  Jacobi_method.c  hw3.docx
数值分析方法/HW4/: HW4.MD  Problem1.c  hw4.docx
数值分析方法/HW5/: HW5.MD  Problem_4.c  Problem_5.c  Problem_6.c  Problem_7.c
数值分析方法/Project/: Project.rar  Project_thy.md  logistic.c  logistic_part2.c  三次最小二乘.py  二次最小二乘.py  线性最小二乘.c
数值分析方法/笔记/: Jacobi iterative method.md  Lec01.md  Lec02.md  Lec03.md  Lec04.md  Lec05.md  Lec06.md  Lec07.md  Lec08.md  Lec09.md  Lec10.md  Lec11.md  Lec12.md  Norms.md  Steepest Descent.md  The Gauss-Seidel Method.md  approximation theory.md  linear least squares.md  romberg intergration.md  scaled partial pivoting.md  trapezoidal&Simpson rule.md  三次样条插值.md  内维尔迭代.md  单片多项式近似.md  对角占优矩阵.md  帕德逼近.md  拉格朗日插值多项式.md  欧拉方法.md  求解常微分方程.md  牛顿差商.md  理查德外推.md
数字系统/EC-1/: Areg.v  Datapath.v  Decrement.v  IRreg.v  Increment.v  Nor.v  Out.v  PCreg.v  ROM.v  clk_500ms.v  clkdiv.v  contrl_unit.v  general_processor.v  mux2_1.v  mux2_2.v
数字系统/FSM/: FSM.v  button.v  debounce.v  lock.v  press.v
数字系统/Greedy_snake/: Game_Ctrl_Unit.v  Key.v  Snake.v  Snake_1.v  Snake_Eatting_Apple.v  VGA_Control.v  VGA_top.v  clk_1s.v  clk_2ms.v  cnt60.v  counter.v  scan.v  speed_control.v  top.v
数字系统/MUX_3/: mux3.v
数字系统/on_off/: onoff.v
数据结构基础/: heap sort.md  shell sort.md  不相交集.md  二叉树.md  优先队列.md  图(graph).md  复杂度.md  强连通分量.md  最小生成树.md  线性表.md  网络流问题(network flow).md  队列(queue).md
数据结构基础/HW10/: Uniqueness of MST(dabiao).c  Uniqueness of MST.c  Universal_Travel_Sites.c  test.c
数据结构基础/HW11/: Strongly Connected Components.c
数据结构基础/HW12/: Insertion or Heap Sort.c  remake.c
数据结构基础/HW14/: Hashing - Hard Version.c  test.c
数据结构基础/HW6/: complete_BST.c  percolate_up&down.c
数据结构基础/HW7/: main.c  test.c
数据结构基础/HW8/: Hamiltonian Cycle.c  IsTopOrd.c
数据结构基础/bonus/: bonus1.c  bonus2.c  tmp.c
数据结构基础/project1/: Algorithm1.c  Algorithm2-iterative.c  Algorithm2-recursive.c  algorithm1.xlsx  test.c
数据结构基础/project3/: report.md
汇编程序设计基础/: readme.md  第一次作业.ASM  第三次作业 .ASM  第二次作业.ASM  第四次作业补交.ASM
物联网系统设计/: HW1.md  HW2.MD  readme.md
物联网系统设计/HW3/: HW3.MD  HW3_tmp.MD
物联网系统设计/HW4/: HW4.MD
物联网系统设计/HW5/: HW5.MD
物联网系统设计/HW6/: HW6.MD
物联网系统设计/HW7/: HW7.MD
电磁场与电磁波/作业/: HW1.md  HW2.MD  HW3.MD  HW4.MD  HW5.MD  HW6.MD  HW7.MD  HW8.MD
课程综合实践Ⅰ/PAC/pac2021_publish/: CMakeLists.txt  READ.ME
(+78 files in other folders)
